kubernetes/apps/default/openhab/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: openhab
    namespace: default
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: Host(`openhab.local`)
          middlewares:
            - name: headers
              namespace: default
          services:
            - name: openhab
              port: 8282
              namespace: default
    tls:
        secretName: ${SECRET_CERT_NAME}-prod-tls
